--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -71,6 +71,7 @@ bEnableLegacyInputScales=True
 bEnableMotionControls=True
 bFilterInputByPlatformUser=False
 bShouldFlushPressedKeysOnViewportFocusLost=True
+bEnableDynamicComponentInputBinding=True
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 bEnableGestureRecognizer=False
@@ -79,6 +80,10 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++AxisMappings=(AxisName="Attack Pattern",Scale=1.000000,Key=RightMouseButton)
++AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Turn Right",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="Turn Left",Scale=1.000000,Key=S)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
