--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -81,9 +81,12 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Attack Pattern",Scale=1.000000,Key=RightMouseButton)
-+AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Move Forward And Backwards",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Turn Right",Scale=1.000000,Key=D)
-+AxisMappings=(AxisName="Turn Left",Scale=1.000000,Key=S)
++AxisMappings=(AxisName="Turn Left",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="Move Forward And Backwards",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="Mouse Up/Down",Scale=1.000000,Key=MouseY)
++AxisMappings=(AxisName="Mouse Right/Left",Scale=1.000000,Key=MouseX)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
