--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -80,13 +80,8 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+AxisMappings=(AxisName="Attack Pattern",Scale=1.000000,Key=RightMouseButton)
-+AxisMappings=(AxisName="Move Forward And Backwards",Scale=1.000000,Key=W)
-+AxisMappings=(AxisName="Turn Right",Scale=1.000000,Key=D)
-+AxisMappings=(AxisName="Turn Left",Scale=-1.000000,Key=S)
-+AxisMappings=(AxisName="Move Forward And Backwards",Scale=-1.000000,Key=S)
-+AxisMappings=(AxisName="Mouse Up/Down",Scale=1.000000,Key=MouseY)
-+AxisMappings=(AxisName="Mouse Right/Left",Scale=1.000000,Key=MouseX)
++ActionMappings=(ActionName="Attack Pattern",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
