--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -89,3 +89,6 @@ DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.Defaul
 +ConsoleKeys=Tilde
 +ConsoleKeys=Caret
 
+[/Script/InputEditor.EnhancedInputEditorProjectSettings]
+DefaultEditorInputClass=/Script/EnhancedInput.EnhancedPlayerInput
+
