Preperation for demo build, removale of all obstacles

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,13 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=1DAB8D1B468338ACF47F21AEB5ACA51A
 ProjectName=Third Person BP Game Template
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "19919C1748D8AEE13317839E84CDE9BC", "Elemental Ascension")
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+StagingDirectory=(Path="C:/Users/Conor/Desktop/Demo Build 05_07_23")
+FullRebuild=True
+
