--- a/Elemental_Ascension.uproject
+++ b/Elemental_Ascension.uproject
@@ -15,5 +15,11 @@
 			"Name": "NiagaraFluids",
 			"Enabled": true
 		}
+	],
+	"TargetPlatforms": [
+		"Linux",
+		"LinuxArm64",
+		"Mac",
+		"Windows"
 	]
 }
